--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "riichi-score",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "type": "module",
   "scripts": {
     "build": "tsc",
@@ -18,5 +18,8 @@
     "prettier": "^3.5.1",
     "typescript": "^5.0.0",
     "vitest": "^3.0.4"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
