chore: fixes exports for use in cjs and mjs

--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -1,15 +1,12 @@
 {
   "compilerOptions": {
     "rootDir": "src",
-    "outDir": "dist",
+    "outDir": "dist/esm",
     "strict": true,
-    "module": "NodeNext",
-    "moduleResolution": "NodeNext",
+    "module": "ESNext",
     "target": "ESNext",
     "declaration": true,
     "declarationMap": true
   },
-  "include": [
-    "src"
-  ]
+  "include": ["src"]
 }
