--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
   "name": "riichi-score",
-  "version": "1.0.2",
+  "version": "1.0.6",
   "type": "module",
+  "main": "dist/cjs/index.js",
+  "module": "dist/esm/index.js",
+  "exports": {
+    ".": {
+      "import": "./dist/esm/index.js",
+      "require": "./dist/cjs/index.js"
+    }
+  },
   "scripts": {
-    "build": "tsc",
+    "build:cjs": "tsc --project tsconfig.cjs.json",
+    "build:esm": "tsc --project tsconfig.esm.json",
+    "build": "npm run build:cjs && npm run build:esm",
     "dev": "tsc --watch",
     "test": "vitest",
     "prepare": "npm run build"
